# python_lc

./: .flake8  .gitignore  pyproject.toml
src/: main.py
src/lc_samples/: lang_default.py  lang_memory.py  lang_parser.py  lang_partial.py  lang_prompt.py
src/rag_samples/: embedding.py  load_data.py  load_docs.py  vector.py
