[project]
name = "python-lc"
version = "0.1.0"
description = ""
authors = [
    {name = "hyunbae.jeon",email = "mazingazz@gmail.com"}
]
readme = "README.md"
requires-python = "<3.15,>=3.10"
dependencies = [
    "langgraph (>=0.6.6,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.32,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-text-splitters (>=0.3.11,<0.4.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "langchain-community (>=0.3.29,<0.4.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "unstructured (>=0.18.14,<0.19.0)",
    "pypdf (>=6.0.0,<7.0.0)",
    "unstructured-inference (>=1.0.5,<2.0.0)",
    "pi-heif (>=1.1.0,<2.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "tesseract (>=0.1.3,<0.2.0)",
    "unstructured-pytesseract (>=0.3.15,<0.4.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
]

[tool.poetry]
packages = [{include = "python_lc", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tools.setuptools]
packages = ["src"]

[tool.poetry.scripts]
start = 'src.main:start'

[tool.black]
line-length = 120